# promise

./: .gitignore  CMakeLists.txt  algorithms.h  lifetime.h  main.cpp  packaged_task.h  promise_1.h  promise_2.h  shared.cmake  single.h  single_async_subject.h
algorithms/: create.h  produce_on.h  tap.h  transform.h  wait.h
